--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
     </section>
     <section class="subscription-form">
         <h2>Stay Updated with the Latest Travel Stories!</h2>
-        <form action="#" method="POST">
-            <input type="text" id="name" name="name" placeholder="Your Name">
-            <input type="email" id="email" name="email" placeholder="Your Email">
+        <form id="subscribeForm" action="#" method="POST">
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
             <button type="submit">Subscribe</button>
         </form>
+        <p id="confirmationMessage" class="hidden">    Thanks for Subscribe </p>
     </section>
+
 <script src="app.js"></script>
 </body>
 
